--- a/usecase/src/main/resources/application.properties
+++ b/usecase/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/usecase
+#spring.datasource.url=jdbc:mysql://10.151.40.161:3306/usecase
 spring.datasource.username=root
 spring.datasource.password=root
 
